adding security rules, merge model files, create first Many2one field

--- a/odoo.conf
+++ b/odoo.conf
@@ -5,5 +5,5 @@ db_host = localhost
 db_port = 5432
 db_user = odoo12
 db_password =odooadmin
-addons_path = /odoo/odoo-server/addons
+addons_path = /odoo/odoo-server/addons, /odoo/technical-training-13.0-01-models
 xmlrpc_port=8070
